tests/snapshots/run_wpt_conformance__coreml_cast_float32_4D_tensor_to_float16.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cast.https.any.js",
    "cast float32 4D tensor to float16",
    "coreml",
    "PASS",
)
